5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4352/executions/1811_2569.log
== TEST (2019-06-11 18:48:46) 
-- CODE:
from numpy import*
v = array(eval(int(input("digite um vetor: "))))
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:49:07) 
-- CODE:
from numpy import*
v = array(eval(input("digite um vetor: ")))
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:49:12) 
-- CODE:
from numpy import*
v = array(eval(input("digite um vetor: ")))
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:56:34) 
-- CODE:
from numpy import*
from math import*
x = array(eval(input("digite um vetor: ")))
s = sum(x)
q = size(x)
m = s/q
for i in range(size(x)):
	d = sqtr((i[0] - m)**2 + (i[1] - m)**2 
print(round(d, 3))			
-- ERROR:
File "XXXX", line 9
    print(round(d, 3))			
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:56:46) 
-- CODE:
from numpy import*
from math import*
x = array(eval(input("digite um vetor: ")))
s = sum(x)
q = size(x)
m = s/q
for i in range(size(x)):
	d = sqtr((i[0] - m)**2 + (i[1] - m)**2 
	print(round(d, 3))			
-- ERROR:
File "XXXX", line 9
    print(round(d, 3))			
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 19:05:18) 
-- CODE:
from numpy import*
from math import*
x = array(eval(input("digite um vetor: ")))
s = sum(x)
q = size(x)
m = s/q
for i in range(size(x)):
	d = sqtr((i[0] - m)**2 + (i[1] - m)**2 + (i[2] - m)** 2 /i[2] - 1)
print(round(d, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 19:05:28) 
-- CODE:
from numpy import*
from math import*
x = array(eval(input("digite um vetor: ")))
s = sum(x)
q = size(x)
m = s/q
for i in range(size(x)):
	d = sqtr((i[0] - m)**2 + (i[1] - m)**2 + (i[2] - m)** 2 /i[2] - 1)
print(round(d, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 19:05:37) 
-- CODE:
from numpy import*
x = array(eval(input("digite um vetor: ")))
s = sum(x)
q = size(x)
m = s/q
from math import*
for i in range(size(x)):
	d = sqtr((i[0] - m)**2 + (i[1] - m)**2 + (i[2] - m)** 2 /i[2] - 1)
print(round(d, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 19:05:53) 
-- CODE:
from numpy import*
x = array(eval(input("digite um vetor: ")))
s = sum(x)
q = size(x)
m = s/q
from math import*
for i in range(size(x)):
	d = sqrt((i[0] - m)**2 + (i[1] - m)**2 + (i[2] - m)** 2 /i[2] - 1)
print(round(d, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 19:06:22) 
-- CODE:
from numpy import*
from math import*
x = array(eval(input("digite um vetor: ")))
s = sum(x)
q = size(x)
m = s/q
for i in range(size(x)):
	d = sqrt((i[0] - m)**2 + (i[1] - m)**2 + (i[2] - m)** 2 /i[2] - 1)
print(round(d, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 22:27:43) 
-- CODE:
from numpy import*
from math import*
x = array(eval(input("digite um vetor: ")))
s = sum(x)
q = size(x)
m = s/q
for i in range(size(x)):
	s = s + (i - m)**2
	d = sqrt(s/(size(x)-1))
print(round(d, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 22:29:01) 
-- CODE:
from numpy import*
from math import*
x = array(eval(input("digite um vetor: ")))
s = 0
k = sum(x)
q = size(x)
m = k/q
for i in range(size(x)):
	s = s + (i - m)**2
	d = sqrt(s/(size(x)-1))
print(round(d, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 22:30:14) 
-- CODE:
from numpy import*
from math import*
x = array(eval(input("digite um vetor: ")))
s = 0
m = sum(x)/size(x)
for i in x:
	s = s + (i - m)**2
	d = sqrt(s/(size(x)-1))
print(round(d, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 22:30:33) 
-- CODE:
from numpy import*
from math import*
x = array(eval(input("digite um vetor: ")))
s = 0
m = sum(x)/size(x)
for i in x:
	s = s + (i - m)**2
	d = sqrt(s/(size(x)-1))
print(round(d, 3))
-- EXECUTION TIME:
1.18595
-- TEST CASE 1:
---- input:
[-4,250,-1,30,12]
---- correct output:
108.498
---- user output:
108.498
-- TEST CASE 2:
---- input:
[12.5,25.2,50.39,47.3,0.9]
---- correct output:
21.526
---- user output:
21.526
-- TEST CASE 3:
---- input:
[1.5,1.9,1.2,1.3,1.4,1.1,1.75]

---- correct output:
0.29
---- user output:
0.29
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
